fix: removes `GERENTE` access of `/unidades`
